Add ConfigurationController
Issue-ID: CCSDK-2966
