# a1-policy-management/src/main/java/org/onap/ccsdk/oran/a1policymanagementservice/controllers/v2/Consts.java
@@ -30,6 +30,7 @@ public class Consts {
 
     public static final String V2_API_ROOT = "/v2";
     public static final String V2_API_NAME = "A1 Policy Management Version 2.0 (in progress)";
+    public static final String V2_CONFIG_API_NAME = "A1 Policy Management Configuration";
 
     private Consts() {}
 }
